--- a/IndustrialServices/Views/Artikel/Create.cshtml
+++ b/IndustrialServices/Views/Artikel/Create.cshtml
@@ -1,6 +1,28 @@
 ﻿@{
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     ViewData["Title"] = "Add Article";
+    var httpcontext = ViewContext.HttpContext;
+    string role = httpcontext.Session.GetString("Role");
+    string id = httpcontext.Session.GetString("ID");
+    if (string.IsNullOrEmpty(role))
+    {
+        // Session is expired or role is not set, redirect to login layout
+        Layout = null;
+
+        <script>
+            window.location.href = '@Url.Action("Index", "Login")';
+        </script>
+
+        return;
+    }
+    if (role == "Admin")
+    {
+        Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    }
+    if (role == "Contributor")
+    {
+        Layout = "~/Views/Shared/_LayoutContributor.cshtml";
+    }
+
 }
 
 <div class="pagetitle">
@@ -18,7 +40,7 @@
                     <br />
 
                     <!-- Form to add article data -->
-                        <input type="text" class="form-control" name="id_pengelola" id="id_pengelola" value=3 hidden>
+                        <input type="text" class="form-control" name="id_pengelola" id="id_pengelola" value=@id hidden>
                         <div class="row mb-3">
                             <label for="tanggal_rilis" class="col-sm-2 col-form-label">Date of Release</label>
                             <div class="col-sm-10">
