--- a/IndustrialServices/Views/TestiCM/Index.cshtml
+++ b/IndustrialServices/Views/TestiCM/Index.cshtml
@@ -2,6 +2,27 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Web Manager Data";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    int no = 1;
+    var httpcontext = ViewContext.HttpContext;
+    string role = httpcontext.Session.GetString("Role");
+    if (string.IsNullOrEmpty(role))
+    {
+        // Session is expired or role is not set, redirect to login layout
+        Layout = null;
+
+        <script>
+            window.location.href = '@Url.Action("Index", "Login")';
+        </script>
+
+        return;
+    }
+    if (role == "Admin")
+    {
+        Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    }
+
 }
 
 <div class="pagetitle">
@@ -571,7 +592,7 @@
                                     </div>
                                 </div>
                                 <div class="row mb-3">
-                                    <label for="foto_peserta" class="col-sm-12 col-form-label">Participant's Photo (Photo must be in 1:1 ratio and max size is 5 MB</label>
+                                    <label for="foto_peserta" class="col-sm-12 col-form-label">Participant's Photo (Photo must be in 1:1 ratio and max size is 5 MB)</label>
                                     <div class="col-sm-10">
                                         <input class="form-control" type="file" name="foto_peserta" id="foto_peserta">
                                     </div>
