--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -167,7 +167,7 @@
 <script>
     function artikel(){
             Swal.fire({
-                icon: 'warning',
+                icon: 'error',
                 title: 'Access Denied',
                 text: 'Only Contributors can access this feature.',
             });
