--- a/IndustrialServices/Views/TestiCM/Index.cshtml
+++ b/IndustrialServices/Views/TestiCM/Index.cshtml
@@ -71,7 +71,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <div class="card" style="background-color: #3498db;">
+        <div class="card" style="background-color: #1e379e;">
             <div class="card-body">
                 <h5 class="card-title text-white">Testimonials</h5>
 
