--- a/IndustrialServices/Views/FacultyMember/Index.cshtml
+++ b/IndustrialServices/Views/FacultyMember/Index.cshtml
@@ -373,7 +373,7 @@
                                         </div>
                                     </div>
                                     <div class="row mb-3">
-                                        <label for="foto_pengajar" class="col-sm-2 col-form-label">Teacher's Photo</label>
+                                    <label for="foto_pengajar" class="col-sm-2 col-form-label">Teacher's Photo (in ratio 1:1)</label>
                                         <div class="col-sm-10">
                                             <input class="form-control" type="file" name="fotopengajar" id="foto_pengajar">
                                         </div>
@@ -421,7 +421,7 @@
 
                                     <div class="row mb-3">
                                         <div class="col-sm-10">
-                                        <input type="text" class="form-control" name="id_pengajar" id="editid_pengajar" hidden>
+                                        <input type="text" class="form-control" name="editid_pengajar" id="editid_pengajar" hidden>
                                         </div>
                                     </div>
                                     <div class="row mb-3">
@@ -447,7 +447,7 @@
                                         </div>
                                     </div>
                                     <div class="row mb-3">
-                                        <label for="foto_pengajar" class="col-sm-2 col-form-label">Teacher's Photo</label>
+                                        <label for="foto_pengajar" class="col-sm-2 col-form-label">Teacher's Photo (in ratio 1:1)</label>
                                         <div class="col-sm-10">
                                         <input class="form-control" type="file" name="editfotopengajar" id="editfoto_pengajar">
                                         </div>
