--- a/IndustrialServices/Views/Home/Index.cshtml
+++ b/IndustrialServices/Views/Home/Index.cshtml
@@ -3,30 +3,247 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<section id="hero" >
+<section id="hero">
     <section id="home" class="home">
-    <div class="container" id="body-page">
-        <div class="container">
+        <div class="container-fluid" id="body-page">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12 d-flex align-items-stretch">
+                        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/assets/img/testflyer1.jpg" class="d-block w-75 mx-auto rounded" alt="Image 2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/assets/img/testflyer2.jpg" class="d-block w-75 mx-auto rounded" alt="Image 3">
+                                </div>
+                                <!-- Add more carousel items as needed -->
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                            <br/>
+                            <br />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="container-lg">
             <div class="row">
-                <div class="col-lg-12 d-flex align-items-stretch">
-                    <div class="icon-boxes d-flex flex-column justify-content-center">
-                        <div class="row">
-                            <div class="col-xl-12 d-flex align-items-stretch" style="width:1040px; position:relative; right:-120px; ">
-                                <div class="icon-box mt-4 mt-xl-0">
-                                    <i class="bx bx-cube-alt"></i>
-                                    <h4>Ullamco laboris ladore pan</h4>
-                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <div class="col-lg-6">
+                    <div class="card" style="background-color: #3498db;">
+                        <div class="card-body">
+                            <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Our Training</h5>
+                            <div class="container mt-5 mb-5">
+
+                                <div class="row g-4">
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                    </div>
+                                </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="card" style="background-color: #3498db;">
+                        <div class="card-body">
+                            <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Our Training</h5>
+                            <div class="container mt-5 mb-5">
+                                <div class="row g-4">
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                    <div class="col col-lg-3">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>  
+
                                 </div>
                             </div>
                         </div>
-                    </div><!-- End .content-->
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
 
-</div>
+
+
     </section>
 </section>
+
+
+<div class="container-lg">
+    <div style="padding:40px;">
+        <div class="container">
+            <div class="row align-items-end mb-4 mb-md-7">
+                <div class="col-md mb-4 mb-md-0">
+                    <h2 class="fw-bolder mb-1">Article</h2>
+                    <h5  style="color:rgba(0,0,0,0.4); font-size:16px;">Latest News, Articles, and Announcements</h5>
+                </div>
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="col-6 col-lg-4 mb-5 mb-md-5">
+            <div class="card border rounded-3 sk-fade h-100">
+                <div class="card-zoom position-relative rounded-bottom-0">
+                        <a class="card-img d-block sk-thumbnail img-ratio-3 rounded-bottom-0" href="https://maps.app.goo.gl/xG12byCagHAPUSuY9">
+                        <img class="shadow-light-lg img-fluid" src="/assets/img/Bukta Abrory.jpg"/>
+                    </a>
+                    <div class="card-footer p-3">
+                        <h6 class="fw-bolder line-clamp-2 mb-0">Biografi Dosen Terbaik di Politeknik Astra! Mencapai aksdlaklsd dalam 1 tahun terakhir.</h6>
+                            <span style="color:rgba(0,0,0,0.4);font-size:14px;">31 Desember 2023</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+</div>
+</div>
+
+
+<footer id="footer" style="color:#ffffff;">
+
+    <div class="footer-top" style="background:#01529C;">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>Address</h3>
+                    <a href="https://maps.app.goo.gl/xG12byCagHAPUSuY9" target="_blank">
+                        <p style="color:white;">
+                            Cikarang Campus <br>
+                            Jl. Gaharu Blok F3 Delta Silicon II Cibatu,<br>
+                            South Cikarang, Bekasi Regency, <br>
+                            West Java 17530 <br><br>
+
+                        </p>
+                    </a>
+                </div>
+
+                                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>Contacts</h3>
+                    <p style="color:white;">
+                        <strong>Phone:</strong><a href="https://wa.me/6285156842086" style="color: white; text-decoration: underline;" target="_blank"> +62 888 7765 9821</a><br>
+                        <strong>Email:</strong> dpp@@astra.polytechnic.ac.id<br>
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <h3>Our Social Media</h3>
+                    <p style="color:white;">
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-12 d-flex align-items-stretch text-center">
+                    <span style="position: relative; left: 50%; transform: translateX(-50%);color:darkgray;">Copyright © 2024 Department Training & Production Astra Polytechnic</span>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</footer><!-- End Footer -->
+
+
+
+<style>
+    .carousel-indicators li {
+        background-color: grey; /* Circle color */
+        border: 1px solid #000; /* Border color */
+        width: 100px; /* Circle diameter */
+        height: 100px; /* Circle diameter */
+        border-radius: 100%; /* Make it a circle */
+        margin: 0 5px; /* Margin between circles */
+        cursor: pointer;
+    }
+
+    .carousel-indicators .active {
+        background-color: #fff; /* Active circle color */
+    }
+</style>
+
+
+
+
 
