--- a/IndustrialServices/Views/Login/Index.cshtml
+++ b/IndustrialServices/Views/Login/Index.cshtml
@@ -112,7 +112,8 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-                                <span>Copyright 2024 © Department Training & Production</span>
+                                <span>Copyright © 2024 Department Training & Production</span>
+                                <span style="display:flex; align-items:center;position:relative;">Move to -->>&nbsp;<a asp-action="Index" asp-controller="Home"> Website Industrial Services</a></span>
               </div>
 
             </div>
