--- a/IndustrialServices/Views/Shared/_Layout.cshtml
+++ b/IndustrialServices/Views/Shared/_Layout.cshtml
@@ -36,12 +36,22 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link relrel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" />
+    <link relrel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header id="header" class="fixed-top" style="padding:0; padding-top:40px;">
         <div class="container d-flex align-items-center" style="padding-bottom:15px;">
-                <img class="logo me-auto" src="~/Content/img/AstraTech.png" style="height: 50px; position:relative; left:-90px;" />
-                <h1 style="font-weight:400; font-family: Poppins, sans-serif; font-size:28px; color: #005aa9; position:relative; left:-650px;">Pelayanan Industri</h1>
+                <img class="logo me-auto" src="/assets/img/AstraTechPolos.png" style="height: 45px; position:relative; left:-85px;top:-5px;" />
+                <h1 style="font-weight:400; font-family: Poppins, sans-serif; font-size:28px; color: #005aa9; position:relative; left:-650px;">Industrial Services</h1>
             <h1 style="font-weight:300; font-family: Poppins, sans-serif; font-size:20px; color: #005aa9; position:relative; left:-420px;">The Best Partner in Business Development</h1>
         </div>
         <div class="navbar shadow-sm navbar-expand-xl navbar-dark p-0" style="border: 1px solid #e0e0e0; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);   border-bottom: 1px solid #ccc;">
@@ -49,32 +59,25 @@
                     <div class="collapse navbar-collapse">
                     <nav id="navbar" class="navbar" style="right:-140px;">
                         <ul style="gap:20px;">
-                                <li><a class="nav-link scrollto" asp-action="Index" asp-controller="Home">Beranda</a></li>
-                                <li><a class="nav-link scrollto" href="#about">Faculty Member</a></li>
+                                <li><a class="nav-link scrollto" asp-action="Index" asp-controller="Home">Home</a></li>
+                            <li><a class="nav-link scrollto" asp-action="FacultyMember" asp-controller="Home">Faculty Member</a></li>
                                 <li class="dropdown">
-                                <a class="nav-link scrollto" href="#services">Departemen Pelatihan dan Produksi <i class="bi bi-chevron-down"></i></a>
+                                <a class="nav-link scrollto" href="#services">Department Training and Production<i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                        <li><a href="#">Facility</a></li>
-                                        <li><a href="#">Products</a></li>
-                                        <li><a href="#">Training</a></li>
+                                    <li><a asp-action="Fasilitas" asp-controller="Home">Facility</a></li>
+                                    <li><a asp-action="Produk" asp-controller="Home">Products</a></li>
+                                    <li><a asp-action="Pelatihan" asp-controller="Home">Training</a></li>
                                     </ul>
                                 </li>
                             <li class="dropdown">
-                                <a class="nav-link scrollto o" href="#portfolio">Caledar of Event <i class="bi bi-chevron-down"></i></a>
+                                <a class="nav-link scrollto o" href="#portfolio">Training Calendar<i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Technical</a></li>
-                                    <li><a href="#">Non-Technical</a></li>
+                                    <li><a asp-action="KalenderTechnical" asp-controller="Home">Technical</a></li>
+                                    <li><a asp-action="KalenderNonTechnical" asp-controller="Home">Non-Technical</a></li>
                                 </ul>
                             </li>
-                                <li><a class="nav-link scrollto" href="#team">Testimoni & Customer Map</a></li>
-                            <li class="dropdown">
-                                <a class="nav-link scrollto o" href="#portfolio"><i class="bi bi-list" style="font-size:20px;"> </i> 
-                                    <i class="bi bi-chevron-down"></i>
-                                </a>
-                                <ul>
-                                    <li><a href="#">Kelola CRUD</a></li>
-                                </ul>
-                            </li>
+                                <li><a class="nav-link scrollto" href="#team">Releases</a></li>
+
                             </ul>
                             <i class="bi bi-list mobile-nav-toggle"></i>
                         </nav>
@@ -88,6 +91,7 @@
         <main id="main" >
             @RenderBody()
         </main>
+            
 </body>
 <style>
     #main {
