--- a/IndustrialServices/wwwroot/Content/css/style.css
+++ b/IndustrialServices/wwwroot/Content/css/style.css
@@ -461,81 +461,82 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; Remove this line */
     background-color: #005aa9;
-    position:relative;
+    position: relative;
+    overflow: hidden; /* Add this line to enable scrolling */
 }
 
 #hero .container {
-  position: relative;
+    position: relative;
 }
 
 #hero h1 {
-  margin: 0;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 56px;
-  text-transform: uppercase;
-  color: #2c4964;
+    margin: 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    text-transform: uppercase;
+    color: #2c4964;
 }
 
 #hero h2 {
-  color: #2c4964;
-  margin: 10px 0 0 0;
-  font-size: 24px;
+    color: #2c4964;
+    margin: 10px 0 0 0;
+    font-size: 24px;
 }
 
 #hero .btn-get-started {
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 12px 35px;
-  margin-top: 30px;
-  border-radius: 50px;
-  transition: 0.5s;
-  color: #fff;
-  background: #1977cc;
+    font-family: "Raleway", sans-serif;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 35px;
+    margin-top: 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #1977cc;
 }
 
 #hero .btn-get-started:hover {
-  background: #3291e6;
+    background: #3291e6;
 }
 
 @media (min-width: 1024px) {
-  #hero {
-    background-attachment: fixed;
-  }
+    #hero {
+        background-attachment: fixed;
+    }
 }
 
 @media (max-width: 992px) {
-  #hero {
-    margin-bottom: 0;
-    height: 100vh;
-  }
+    #hero {
+        margin-bottom: 0;
+        /* height: 100vh; Remove this line */
+    }
 
-  #hero .container {
-    padding-bottom: 63px;
-  }
+    #hero .container {
+        padding-bottom: 63px;
+    }
 
-  #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
-  }
+    #hero h1 {
+        font-size: 28px;
+        line-height: 36px;
+    }
 
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 30px;
-  }
+    #hero h2 {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 30px;
+    }
 }
 
 @media (max-height: 600px) {
-  #hero {
-    height: 110vh;
-  }
+    #hero {
+        height: 110vh;
+    }
 }
 
 /*--------------------------------------------------------------
@@ -1599,83 +1600,83 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  color: #444444;
   font-size: 14px;
-  background: #f1f7fd;
-}
-
-#footer .footer-top {
-  padding: 60px 0 30px 0;
   background: #fff;
-  box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
 }
 
-#footer .footer-top .footer-contact {
-  margin-bottom: 30px;
-}
+    #footer .footer-top {
+        padding: 60px 0 30px 0;
+        box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
+    }
 
-#footer .footer-top .footer-contact h4 {
-  font-size: 22px;
-  margin: 0 0 30px 0;
-  padding: 2px 0 2px 0;
-  line-height: 1;
-  font-weight: 700;
-}
+        #footer .footer-top .footer-contact {
+            margin-bottom: 30px;
+        }
 
-#footer .footer-top .footer-contact p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
-  color: #777777;
-}
+            #footer .footer-top .footer-contact h4 {
+                font-size: 22px;
+                margin: 0 0 30px 0;
+                padding: 2px 0 2px 0;
+                line-height: 1;
+                font-weight: 700;
+                color: #ffffff; /* Change font color to white */
+            }
 
-#footer .footer-top h4 {
-  font-size: 16px;
-  font-weight: bold;
-  color: #444444;
-  position: relative;
-  padding-bottom: 12px;
-}
+            #footer .footer-top .footer-contact p {
+                font-size: 14px;
+                line-height: 24px;
+                margin-bottom: 0;
+                font-family: "Raleway", sans-serif;
+                color: #ffffff; /* Change font color to white */
+            }
 
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
+        #footer .footer-top h4 {
+            font-size: 16px;
+            font-weight: bold;
+            color: #ffffff; /* Change font color to white */
+            position: relative;
+            padding-bottom: 12px;
+        }
 
-#footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+        #footer .footer-top .footer-links {
+            margin-bottom: 30px;
+        }
 
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #1c84e3;
-  font-size: 18px;
-  line-height: 1;
-}
+            #footer .footer-top .footer-links ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+            }
 
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
+                #footer .footer-top .footer-links ul i {
+                    padding-right: 2px;
+                    color: #ffffff; /* Change font color to white */
+                    font-size: 18px;
+                    line-height: 1;
+                }
 
-#footer .footer-top .footer-links ul li:first-child {
-  padding-top: 0;
-}
+                #footer .footer-top .footer-links ul li {
+                    padding: 10px 0;
+                    display: flex;
+                    align-items: center;
+                }
 
-#footer .footer-top .footer-links ul a {
-  color: #777777;
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
-}
+                    #footer .footer-top .footer-links ul li:first-child {
+                        padding-top: 0;
+                    }
 
-#footer .footer-top .footer-links ul a:hover {
-  text-decoration: none;
-  color: #1977cc;
-}
+                #footer .footer-top .footer-links ul a {
+                    color: #ffffff; /* Change font color to white */
+                    transition: 0.3s;
+                    display: inline-block;
+                    line-height: 1;
+                }
+
+                    #footer .footer-top .footer-links ul a:hover {
+                        text-decoration: none;
+                        color: #fff;
+                    }
+
 
 #footer .footer-newsletter {
   font-size: 15px;
@@ -1750,3 +1751,4 @@ section {
   color: #fff;
   text-decoration: none;
 }
+
